--- a/src/locales/ru/translationRU.json
+++ b/src/locales/ru/translationRU.json
@@ -1,30 +1,35 @@
 {
   "firstName": "Ясин",
   "lastName": "Хадж Рабя",
-  "myself":"Себя",
-  "languages":{
-    "en":"Английский",
-    "fr":"Французский",
-    "ru":"Русский",
-    "sv":"Шведский"
+  "myself": "Себя",
+  "languages": {
+    "en": "Английский",
+    "fr": "Французский",
+    "ru": "Русский",
+    "sv": "Шведский"
   },
-  "occupations":["Full-stack разработчик", "Переводчик по совместительству","Полиглот"],
-  "navNames":{
-    "about":"Я",
-    "skills":"Навыки",
-    "portfolio":"Портфолио"},
-  "about":{
-    "title":"Обо мне",
-    "content":"Поверьте или нет но, описать себя оказался самой сложной частью создания этого сайта.\n Всё равно постараюсь: После того, как выпустился по специальности «Инженер-Электроника» и после первого опыта работы, я решил переучиться на работу Full Stack Веб-разработчика через трехмесячный буткамп по кодированию смотря учитывая множество возможностей в этой области.\n Провожу большинство свободного времени изучая новые навыки и языки, или занимая субтитрами русского серяла «Кухня» с русского на английский.\n Ну вот и всё! Я сейчас ищу работу как Веб-разработчик."
+  "occupations": [
+    "Full-stack разработчик",
+    "Переводчик по совместительству",
+    "Полиглот"
+  ],
+  "navNames": {
+    "about": "Я",
+    "skills": "Навыки",
+    "portfolio": "Портфолио"
   },
-  "skills":{
-    "title":"То, что я умеею",
-    "content":"Как Инженер-Электроника, я смог выучить кодирование вдоль своей учёбы и исползовать MATLAB, VHDL среди прочего. Раз я сейчас хочу заниматься веб програмирование — неуместные навыки не будут упомянуты."
+  "about": {
+    "title": "Обо мне",
+    "content": "Поверьте или нет — описать себя оказался самой сложной частью создания этого сайта.\n Всё равно постараюсь: После того, как выпустился по специальности «Инженер-Электроника» и после первого опыта работы, я решил переучиться на работу Full Stack Веб-разработчика через трехмесячный буткамп по кодированию, учитывая множество возможностей в этой области.\n Провожу большинство свободного времени изучая новые навыки и языки, или занимая субтитрами русского серяла «Кухня» с русского на английский.\n Ну вот и всё! Я сейчас ищу работу как Веб-разработчик."
   },
-  "portfolio":{
-    "title":"Мои работы",
-    "content":"Перейдите на мою страницу Github или LinkedIn пока, чтобы узнать побольше о моей работе."
+  "skills": {
+    "title": "То, что я умеею",
+    "content": "Как Инженер-Электроника, я смог выучить кодирование вдоль своей учёбы и исползовать MATLAB, VHDL среди прочего. Раз я сейчас хочу заниматься веб програмирование — неуместные навыки не будут упомянуты."
   },
-  "madeWith":"Создано с ReactJS",
-  "inProgress":"В разработке"
+  "portfolio": {
+    "title": "Мои работы",
+    "content": "Перейдите на мою страницу Github или LinkedIn пока, чтобы узнать побольше о моей работе."
+  },
+  "madeWith": "Создано с ReactJS",
+  "inProgress": "В разработке"
 }
