--- a/src/locales/sv/translationSV.json
+++ b/src/locales/sv/translationSV.json
@@ -16,11 +16,11 @@
   },
   "about": {
     "title": "Om mig",
-    "content": "Tro det eller ej, men att beskriva mig har varit den svåraste del av den här sidans utveckling! Här är nåt försök dock: Efter avklarade studier som elektronikingenjör och en först arbetserfarenhet, jag har beslutat mig omskola till webutvecklare, för alla bra möjligheterna som det finns. Min fritid är huvudsakligen tillbringad med att förbättra kunskaperna (specielt språkkunskaperna) och att lära mig nåt nytt. Jag har börjat lära mig svenska för 2 år sen och tänker fortstätta så, trots att – lustigt nog – de flesta svenskarna kan nästan perfekt engelska. Nu söker jag jobb som webutvecklare."
+    "content": "Tro det eller ej, men att beskriva mig har varit den svåraste del av den här sidans utveckling! Här är nåt försök dock: Efter avklarade studier som elektronikingenjör och en först arbetserfarenhet, jag har beslutat mig omskola till webutvecklare, för alla bra jobbmöjligheterna som det finns. Min fritid är huvudsakligen tillbringad med att förbättra kunskaperna (specielt språkkunskaperna) och att lära mig nåt nytt. Jag har börjat lära mig svenska för 2 år sen och tänker fortstätta så, trots att – lustigt nog – de flesta svenskarna kan nästan perfekt engelska. Nu söker jag jobb som webutvecklare."
   },
   "skills": {
     "title": "Kvalifikationer",
-    "content": "Som elektronikingenjör, jag har lärt mig kodning ganska tidigt för att den var ett stort del av min utbildning, och har bland annat användt MATLAB, VHDL med mera. Med tanke på tjänsten jag vill inneha — kvalifikationer som gäller inte web ytveckling ska inte vara nämnas där nere. "
+    "content": "Som elektronikingenjör, jag har lärt mig kodning ganska tidigt för att den var ett stort del av min utbildning, och har bland annat användt MATLAB, VHDL med mera. Med tanke på tjänsten jag vill inneha — kvalifikationer som gäller inte web ytveckling ska inte vara nämnas där nere."
   },
   "portfolio": {
     "title": "Portfolio",
