--- a/src/locales/fr/translationFR.json
+++ b/src/locales/fr/translationFR.json
@@ -20,7 +20,7 @@
   },
   "about": {
     "title": "Me concernant",
-    "content": "Pour me décrire brièvement : Suivant l'obtention d'un Master 2 en électronique et après une première expérience professionnelle en ESN, j'ai décidé de me reconvertir en Développeur Web à travers un bootcamp de 3 mois et étant données des opportunités bien plus intéressantes dans ce domaine.\n Je passe la majeure partie de mon temps libre à acquérir de nouvelles compétences, à apprendre de nouvelles langues, ou encore à réaliser des sous-titres de séries Russes entre autres. À part cela, je suis à la recherche d'opportunités en tant que Développeur Web. La moitié des langues que je parle ont été apprises en autodidacte."
+    "content": "Suivant l'obtention d'un Master 2 en électronique et après une première expérience professionnelle en ESN, j'ai décidé de me reconvertir en Développeur Web à travers un bootcamp de 3 mois et étant données des opportunités bien plus intéressantes dans ce domaine.\n Je passe la majeure partie de mon temps libre à acquérir de nouvelles compétences, à apprendre de nouvelles langues, ou encore à réaliser des sous-titres de séries Russes entre autres. À part cela, je suis à la recherche d'opportunités en tant que Développeur Web. La moitié des langues que je parle ont été apprises en autodidacte."
   },
   "skills": {
     "title": "Compétences",
